2007-11-23  Johan Dahlin  <johan@gnome.org>

	* flumotion/twisted/fdserver.py: 
	use map() instead of a string to workaround gettext encoding problems.

	* po/POTFILES.in: Add all glade files and python files here.

	* po/*.po: Update

2007-11-22  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/connections.py (Connections.__init__): 
	use scroll_to_cell instead of set_cursor, to actually go to the select
	the connection used the last time.

	* flumotion/wizard/conversionsteps.py (TheoraStep.worker_changed)
	(VorbisStep.worker_changed.hasVorbis, ConversionStep._verify): 
	Get rid of defer_generator_method.
	
	* flumotion/wizard/basesteps.py: 
	(OverlayStep._worker_changed.importError): Get rid
	of defer_generator_method.

2007-11-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/redhat/flumotion:
	  Make a better condrestart for the case where you restart only one
	  specific manager/worker.

2007-11-21  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/registry.py (READ_CACHE)
	(ComponentRegistry.__init__): Don't read the cache on startup, so
	as not to cause a memory usage spike. See #799.

2007-11-21  Michael Smith <msmith@fluendo.com>

	* flumotion/common/config.py:
	  Serialise fractions correctly.
	* flumotion/manager/admin.py:
	  Verify the registry when loading a new configuration, so that new
	  or changed components can be loaded successfully.

2007-11-21  Michael Smith <msmith@fluendo.com>

	* flumotion/wizard/save.py:
	  Don't use the registry here; it's the only thing in the admin that
	  does, and it's slow and memory-hungry. The bugs we were using this
	  to detect haven't existed in a couple of years.

2007-11-21  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_consumption.glade: 
	Set inconsistent to false for checkbutton_shout2_audio_video

2007-11-21  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/package.py (Packager.getPathsForPackage):
	Style.
	(Packager.registerPackagePath): Style, and a couple of checks that